[project]
name = "true-connect"
version = "0.1.0"
description = "FastAPI user-profile CRUD"
dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.22.0",
  "sqlmodel>=0.0.8",
  "asyncpg>=0.27.0",
  "alembic>=1.11.0",
  "pydantic>=1.10.0",
]

[tool.uv]
# Optional uv configuration placeholder.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"